--- a/layout/_partial/comment/twikoo.ejs
+++ b/layout/_partial/comment/twikoo.ejs
@@ -1,8 +1,8 @@
 <!--PC版-->
 <% if (theme.comment && theme.comment.twikoo_envId) { %>
-    <!-- UY BEGIN -->
+    <!-- twikoo BEGIN -->
 <div id="tcomment"></div>
-<script src="https://cdn.staticfile.org/twikoo/1.6.17/twikoo.all.min.js"></script>
+<script src="https://unpkg.com/twikoo/dist/twikoo.all.min.js"></script>
 <script>
 twikoo.init({
   envId: "<%- theme.comment.twikoo_envId %>", // 腾讯云环境填 envId；Vercel 环境填地址（https://xxx.vercel.app）
@@ -12,5 +12,5 @@ twikoo.init({
   // lang: 'zh-CN', // 用于手动设定评论区语言，支持的语言列表 https://github.com/imaegoo/twikoo/blob/main/src/client/utils/i18n/index.js
 })
 </script>
-    <!-- UY END -->
+    <!-- twikoo END -->
 <% } %>
